--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = ["Davee Sok <daveesok@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 black = "^21.7b0"
-python-socketio = {extras = ["client"], version = "^5.4.0"}
+python-socketio = {extras = ["asyncio_client"], version = "^5.4.0"}
 
 [tool.poetry.dev-dependencies]
 
